--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "bootstrap": "^5.3.2",
-    "gh-pages": "^6.1.1",
     "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -45,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0",
+    "install": "^0.13.0",
+    "npm": "^10.9.0"
   }
 }
