--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
     "openai": "^4.26.0",
     "react": "^18.2.0",
